--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ APP_KEY=base64:tpxwP2AHOseo+Skweh/CReQzHitDxWix0DcWL4aUb3M=
 APP_DEBUG=true
 APP_URL=http://localhost:3000
 
+TELESCOPE_ENABLED=false
+
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
